# s2cholar

./: .travis.yml  LICENSE  README.md  Untitled.ipynb  docs-requirements.txt  nohup.out  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: publish-to-test-pypi.yml  tests.yaml
docs/source/: Author.md  AuthorApi.md  AuthorBatch.md  AuthorInfo.md  AuthorWithPapers.md  BasePaper.md  Citation.md  CitationBatch.md  CitationCitingPaper.md  Embedding.md  Error400.md  Error404.md  FullPaper.md  PaperApi.md  PaperBatch.md  PaperInfo.md  PaperSearchBatch.md  PaperWithLinks.md  Reference.md  ReferenceBatch.md  ReferenceCitedPaper.md  conf.py  index.md
s2cholar/: __init__.py  api_client.py  configuration.py  rest.py
s2cholar/api/: __init__.py  author_api.py  paper_api.py
s2cholar/models/: __init__.py  author.py  author_batch.py  author_info.py  author_with_papers.py  base_paper.py  citation.py  citation_batch.py  citation_citing_paper.py  embedding.py  error400.py  error404.py  full_paper.py  paper_batch.py  paper_info.py  paper_search_batch.py  reference.py  (+3 more)
test/: conftest.py  test_author.py  test_author_api.py  test_author_batch.py  test_author_info.py  test_author_with_papers.py  test_base_paper.py  test_citation.py  test_citation_batch.py  test_citation_citing_paper.py  test_embedding.py  test_error400.py  test_error404.py  test_full_paper.py  test_paper_api.py  test_paper_batch.py  test_paper_info.py  test_paper_search_batch.py  test_paper_with_links.py  test_reference.py  test_reference_batch.py  test_reference_cited_paper.py
