[metadata]
name = s2cholar
description = Python API client for Semantic Scholar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luizvbo/s2cholar
author = Luiz Otavio Vilas Boas Oliveira
author_email = luiz.vbo@gmail.com
license = MIT license
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2.7

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:s2cholar/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']
